# OxideDex

./: .gitignore  CLAUDE.md  Cargo.toml  Project_Notes.md  README.md  test_all_pokemon.sh
OxideDex/: Cargo.toml
OxideDex/src/: display.rs  main.rs  pokemon.rs
note_taker/: Cargo.toml
note_taker/src/: main.rs
rustdex/: Cargo.toml
rustdex/src/: main.rs
src/: api_test.rs  display.rs  dual_display.rs  format.rs  main.rs  type_matchup.rs
