[package]
name = "OxideDex"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
rustemon = { version = "*", features = ["serialize"] }
colored = "2.1"
viuer = "0.7"
image = "0.24"
bytes = "1"
reqwest = { version = "0.11", features = ["blocking","json"] }
serde = "1.0.228"
control = "1.0.0"
clearscreen = "4.0.6"
